RESOLVED FIXED315571
[GStreamer][WebRTC][Rice] webrtc/datachannel/multiple-connections.html still flaky crashing in Debug
https://bugs.webkit.org/show_bug.cgi?id=315571
Summary [GStreamer][WebRTC][Rice] webrtc/datachannel/multiple-connections.html still ...
Philippe Normand
Reported 2026-05-26 08:44:41 PDT
Attachments
log (3.55 MB, text/plain)
2026-05-26 08:44 PDT, Philippe Normand
no flags
Philippe Normand
Comment 1 2026-05-26 08:46:24 PDT
EWS
Comment 2 2026-05-28 00:40:00 PDT
Committed 314018@main (8af0c2d1ea00): <https://commits.webkit.org/314018@main> Reviewed commits have been landed. Closing PR #65679 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-05-28 00:40:13 PDT
Note You need to log in before you can comment on or make changes to this bug.