Cherry-pick 314018@main (8af0c2d1ea00). https://bugs.webkit.org/show_bug.cgi?id=315571

[GStreamer][WebRTC][Rice] webrtc/datachannel/multiple-connections.html still flaky crashing in Debug
    https://bugs.webkit.org/show_bug.cgi?id=315571

    Reviewed by Xabier Rodriguez-Calvar.

    Don't attempt to notify incoming data after the ICE agent was closed.

    * Source/WebCore/Modules/mediastream/gstreamer/GStreamerIceAgent.cpp:
    (webkitGstWebRTCIceAgentIsClosed):
    (webkitGstWebRTCIceAgentClose):
    (webkitGstWebRTCIceAgentConfigure):

    Canonical link: https://commits.webkit.org/314018@main

Canonical link: https://commits.webkit.org/305877.713@webkitglib/2.52